# sdizo-algorithms-project

./: CMakeLists.txt  Console_app.cpp  Console_app.h  Edge.h  Fifo_queue.cpp  Fifo_queue.h  Makefile.win  Matrix_rep.cpp  Matrix_rep.h  N_list_el.h  N_list_rep.cpp  N_list_rep.h  README.md  Reader.cpp  Reader.h  main.cpp  results.txt  test.txt  test3.txt
